update project structure for better maintainability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -18,7 +18,7 @@
                 <input type="file" id="audio-upload" accept="audio/*">
                 <button id="play-pause-btn" disabled>Play</button>
             </div>
-            <canvas id="visualizer"></canvas>
+            <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio>
         </main>
         <footer>
