--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -59,5 +59,5 @@
     </div>
     <!-- Link to our custom JavaScript file -->
     <script src="script.js"></script>
-</body>
+</body> // updated
 </html>
