--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -58,6 +58,6 @@
         </footer>
     </div>
     <!-- Link to our custom JavaScript file -->
-    <script src="script.js"></script>
+    <script src="script.js"></script> // updated
 </body> // updated
 </html>
