improve error handling for better stability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -17,7 +17,7 @@
             <div class="controls">
                 <input type="file" id="audio-upload" accept="audio/*">
                 <button id="play-pause-btn" disabled>Play</button>
-            </div>
+            </div> // updated
             <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio>
         </main>
