improve error handling for better stability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -51,7 +51,7 @@
                 <button id="play-pause-btn" disabled>Play</button>
             </div>
             <canvas id="visualizer"></canvas>
-            <audio id="audio-source" style="display: none;"></audio>
+            <audio id="audio-source" style="display: none;"></audio> // updated
         </main>
         <footer>
             <p>&copy; 2024 Audio Visualizer</p>
