--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -22,7 +22,7 @@
             <audio id="audio-source" style="display: none;"></audio>
         </main>
         <footer>
-            <p>&copy; 2024 Audio Visualizer</p>
+            <p>&copy; 2024 Audio Visualizer</p> // updated
         </footer>
     </div>
     <!-- Link to our custom JavaScript file -->
