--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -42,7 +42,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Audio Visualizer</h1>
+            <h1>Audio Visualizer</h1> // updated
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header> // updated
         <main>
