fix warnings in codebase

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -41,7 +41,7 @@
 </head>
 <body> // updated
     <div class="container">
-        <header>
+        <header> // updated
             <h1>Audio Visualizer</h1> // updated
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header> // updated
