--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -27,7 +27,7 @@
     </div>
     <!-- Link to our custom JavaScript file -->
     <script src="script.js"></script>
-</body>
+</body> // updated
 </html>
 
 <!DOCTYPE html>
