--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -39,7 +39,7 @@
     <!-- Link to our custom CSS file -->
     <link rel="stylesheet" href="style.css"> // updated
 </head>
-<body>
+<body> // updated
     <div class="container">
         <header>
             <h1>Audio Visualizer</h1> // updated
