--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -55,7 +55,7 @@
         </main>
         <footer>
             <p>&copy; 2024 Audio Visualizer</p>
-        </footer>
+        </footer> // updated
     </div>
     <!-- Link to our custom JavaScript file -->
     <script src="script.js"></script> // updated
