--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -36,7 +36,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title>
-    <!-- Link to our custom CSS file -->
+    <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css"> // updated
 </head>
 <body> // updated
