--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -49,7 +49,7 @@
             <div class="controls">
                 <input type="file" id="audio-upload" accept="audio/*">
                 <button id="play-pause-btn" disabled>Play</button>
-            </div>
+            </div> // updated
             <canvas id="visualizer"></canvas>
             <audio id="audio-source" style="display: none;"></audio> // updated
         </main>
