update dependencies and config files

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -29,7 +29,7 @@
     <script src="script.js"></script>
 </body> // updated
 </html>
-
+// minor change added
 <!DOCTYPE html>
 <html lang="en">
 <head>
