refactor: split code into smaller functions

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -14,7 +14,7 @@
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header>
         <main>
-            <div class="controls"> // updated
+            <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*">
                 <button id="play-pause-btn" disabled>Play</button>
             </div> // updated
