fix: small bug fixes and adjustments

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container"> // updated
         <header>
             <h1>Audio Visualizer</h1>
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
