refactor: split code into smaller functions

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -30,7 +30,7 @@
 </body> // updated
 </html>
 // minor change added
-<!DOCTYPE html>
+<!DOCTYPE html> // updated
 <html lang="en"> // updated
 <head>
     <meta charset="UTF-8">
