--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -31,7 +31,7 @@
 </html>
 // minor change added
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> // updated
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
