--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -3,7 +3,7 @@
 <head> // updated
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Visualizer</title>
+    <title>Audio Visualizer</title> // updated
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css">
 </head>
