docs: improve inline comments

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -7,7 +7,7 @@
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> // updated
     <div class="container"> // updated
         <header>
             <h1>Audio Visualizer</h1>
