--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -57,7 +57,7 @@
             <p>&copy; 2024 Audio Visualizer</p>
         </footer> // updated // updated
     </div>
-    <!-- Link to our custom JavaScript file --> // updated
+    <!-- Link to our custom JavaScript file --> // updated // updated
     <script src="script.js"></script> // updated
 </body> // updated
 </html>
