--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -16,7 +16,7 @@
         <main>
             <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*">
-                <button id="play-pause-btn" disabled>Play</button>
+                <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated
             <canvas id="visualizer"></canvas> // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated
