--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> // updated
 <head> // updated
     <meta charset="UTF-8"> // updated
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title> // updated
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css">
