--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -50,7 +50,7 @@
                 <input type="file" id="audio-upload" accept="audio/*">
                 <button id="play-pause-btn" disabled>Play</button>
             </div> // updated
-            <canvas id="visualizer"></canvas>
+            <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio> // updated
         </main>
         <footer>
