fix typo in variable names

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <div class="controls"> // updated // updated
-                <input type="file" id="audio-upload" accept="audio/*">
+                <input type="file" id="audio-upload" accept="audio/*"> // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated
             <canvas id="visualizer"></canvas> // updated // updated
