enhance code readability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> // updated
     <div class="container"> // updated
-        <header>
+        <header> // updated
             <h1>Audio Visualizer</h1>
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header>
