--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -12,7 +12,7 @@
         <header> // updated
             <h1>Audio Visualizer</h1>
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
-        </header>
+        </header> // updated
         <main>
             <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*"> // updated
