--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -42,7 +42,7 @@
 <body> // updated
     <div class="container">
         <header> // updated
-            <h1>Audio Visualizer</h1> // updated
+            <h1>Audio Visualizer</h1> // updated // updated
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header> // updated
         <main>
