refactor: minor code structure improvements

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -52,7 +52,7 @@
             </div> // updated
             <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio> // updated
-        </main>
+        </main> // updated
         <footer>
             <p>&copy; 2024 Audio Visualizer</p>
         </footer> // updated // updated
