docs: update comments and documentation

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <header> // updated
             <h1>Audio Visualizer</h1> // updated // updated
-            <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
+            <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p> // updated
         </header> // updated
         <main>
             <div class="controls">
