--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -39,7 +39,7 @@
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css"> // updated
 </head>
-<body> // updated
+<body> // updated // updated
     <div class="container">
         <header> // updated
             <h1>Audio Visualizer</h1> // updated // updated
