--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -34,7 +34,7 @@
 <html lang="en"> // updated
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
     <title>Audio Visualizer</title>
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css"> // updated
