--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"> // updated
-<head> // updated
+<head> // updated // updated
     <meta charset="UTF-8"> // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title> // updated
