--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -7,7 +7,7 @@
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css">
 </head>
-<body> // updated
+<body> // updated // updated
     <div class="container"> // updated
         <header> // updated
             <h1>Audio Visualizer</h1>
