docs: improve inline comments

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -18,7 +18,7 @@
                 <input type="file" id="audio-upload" accept="audio/*"> // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated
-            <canvas id="visualizer"></canvas> // updated // updated
+            <canvas id="visualizer"></canvas> // updated // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated
         </main>
         <footer>
