update project structure for better maintainability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -20,7 +20,7 @@
             </div> // updated
             <canvas id="visualizer"></canvas> // updated // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated
-        </main>
+        </main> // updated
         <footer>
             <p>&copy; 2024 Audio Visualizer</p> // updated // updated
         </footer>
