--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -19,7 +19,7 @@
                 <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated
             <canvas id="visualizer"></canvas> // updated // updated // updated
-            <audio id="audio-source" style="display: none;"></audio> // updated // updated
+            <audio id="audio-source" style="display: none;"></audio> // updated // updated // updated
         </main> // updated
         <footer>
             <p>&copy; 2024 Audio Visualizer</p> // updated // updated
