--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -37,7 +37,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
     <title>Audio Visualizer</title>
     <!-- Link to our custom CSS file --> // updated
-    <link rel="stylesheet" href="style.css"> // updated
+    <link rel="stylesheet" href="style.css"> // updated // updated
 </head>
 <body> // updated // updated
     <div class="container">
