update configuration settings

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -47,7 +47,7 @@
         </header> // updated
         <main>
             <div class="controls">
-                <input type="file" id="audio-upload" accept="audio/*">
+                <input type="file" id="audio-upload" accept="audio/*"> // updated
                 <button id="play-pause-btn" disabled>Play</button>
             </div> // updated
             <canvas id="visualizer"></canvas> // updated
