update project files and improvements

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -28,7 +28,7 @@
     <!-- Link to our custom JavaScript file -->
     <script src="script.js"></script>
 </body> // updated
-</html>
+</html> // updated
 // minor change added
 <!DOCTYPE html> // updated
 <html lang="en"> // updated // updated
