enhance code readability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -55,7 +55,7 @@
         </main> // updated
         <footer>
             <p>&copy; 2024 Audio Visualizer</p>
-        </footer> // updated // updated
+        </footer> // updated // updated // updated
     </div>
     <!-- Link to our custom JavaScript file --> // updated // updated // updated
     <script src="script.js"></script> // updated // updated
