update dependencies and config files

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -41,7 +41,7 @@
 </head>
 <body> // updated // updated
     <div class="container">
-        <header> // updated
+        <header> // updated // updated
             <h1>Audio Visualizer</h1> // updated // updated
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p> // updated
         </header> // updated
