fix: adjust function parameters for clarity

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -17,7 +17,7 @@
             <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*"> // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
-            </div> // updated
+            </div> // updated // updated
             <canvas id="visualizer"></canvas> // updated // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated // updated
         </main> // updated
