--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> // updated // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title> // updated
-    <!-- Link to our custom CSS file --> // updated
+    <!-- Link to our custom CSS file --> // updated // updated
     <link rel="stylesheet" href="style.css">
 </head>
 <body> // updated // updated
