--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -59,5 +59,5 @@
     </div>
     <!-- Link to our custom JavaScript file --> // updated // updated // updated
     <script src="script.js"></script> // updated // updated
-</body> // updated
+</body> // updated // updated
 </html>
