fix: small bug fixes and adjustments

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> // updated
 <head> // updated // updated // updated
-    <meta charset="UTF-8"> // updated
+    <meta charset="UTF-8"> // updated // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title> // updated
     <!-- Link to our custom CSS file --> // updated
