--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -33,7 +33,7 @@
 <!DOCTYPE html> // updated
 <html lang="en"> // updated // updated
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
     <title>Audio Visualizer</title>
     <!-- Link to our custom CSS file --> // updated
