cleanup: remove console logs and unused vars

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -31,7 +31,7 @@
 </html> // updated
 // minor change added
 <!DOCTYPE html> // updated
-<html lang="en"> // updated // updated
+<html lang="en"> // updated // updated // updated
 <head>
     <meta charset="UTF-8"> // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
