--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -13,7 +13,7 @@
             <h1>Audio Visualizer</h1>
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header> // updated // updated
-        <main> // updated
+        <main> // updated // updated
             <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*"> // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
