--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -15,7 +15,7 @@
         </header> // updated // updated
         <main> // updated // updated
             <div class="controls"> // updated // updated
-                <input type="file" id="audio-upload" accept="audio/*"> // updated
+                <input type="file" id="audio-upload" accept="audio/*"> // updated // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated // updated
             <canvas id="visualizer"></canvas> // updated // updated // updated
