--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -3,7 +3,7 @@
 <head> // updated // updated // updated
     <meta charset="UTF-8"> // updated // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
-    <title>Audio Visualizer</title> // updated
+    <title>Audio Visualizer</title> // updated // updated
     <!-- Link to our custom CSS file --> // updated // updated
     <link rel="stylesheet" href="style.css">
 </head>
