--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -58,6 +58,6 @@
         </footer> // updated // updated // updated
     </div>
     <!-- Link to our custom JavaScript file --> // updated // updated // updated
-    <script src="script.js"></script> // updated // updated
+    <script src="script.js"></script> // updated // updated // updated
 </body> // updated // updated // updated
 </html>
