optimize code for performance

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -66,3 +66,4 @@
 <html lang="en"> // updated
 <head> // updated // updated // updated
     <meta charset="UTF-8"> // updated // updated
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
