optimize code for performance

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -61,3 +61,5 @@
     <script src="script.js"></script> // updated // updated // updated
 </body> // updated // updated // updated
 </html>
+
+<!DOCTYPE html>
