--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -65,3 +65,4 @@
 <!DOCTYPE html>
 <html lang="en"> // updated
 <head> // updated // updated // updated
+    <meta charset="UTF-8"> // updated // updated
