--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -69,3 +69,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title> // updated // updated
     <!-- Link to our custom CSS file --> // updated // updated
+    <link rel="stylesheet" href="style.css">
