refactor: minor code structure improvements

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -70,4 +70,5 @@
     <title>Audio Visualizer</title> // updated // updated
     <!-- Link to our custom CSS file --> // updated // updated
     <link rel="stylesheet" href="style.css">
-</head>
+</head>
+<body> // updated // updated
