--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -67,3 +67,4 @@
 <head> // updated // updated // updated
     <meta charset="UTF-8"> // updated // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
+    <title>Audio Visualizer</title> // updated // updated
