refactor: split code into smaller functions

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -68,3 +68,4 @@
     <meta charset="UTF-8"> // updated // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated
     <title>Audio Visualizer</title> // updated // updated
+    <!-- Link to our custom CSS file --> // updated // updated
