update build files and scripts

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -74,3 +74,4 @@
 <body> // updated // updated
     <div class="container"> // updated
         <header> // updated
+            <h1>Audio Visualizer</h1>
