--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -77,3 +77,4 @@
             <h1>Audio Visualizer</h1>
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header> // updated // updated
+        <main> // updated // updated
