--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -75,4 +75,5 @@
     <div class="container"> // updated
         <header> // updated
             <h1>Audio Visualizer</h1>
-            <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
+            <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
+        </header> // updated // updated
