update project structure for better maintainability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -79,3 +79,4 @@
         </header> // updated // updated
         <main> // updated // updated
             <div class="controls"> // updated // updated
+                <input type="file" id="audio-upload" accept="audio/*"> // updated // updated
