--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -78,3 +78,4 @@
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
         </header> // updated // updated
         <main> // updated // updated
+            <div class="controls"> // updated // updated
