refactor: simplify function logic

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -74,4 +74,5 @@
 <body> // updated // updated
     <div class="container"> // updated
         <header> // updated
-            <h1>Audio Visualizer</h1>
+            <h1>Audio Visualizer</h1>
+            <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p>
