refactor: simplify function logic

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -83,3 +83,4 @@
                 <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated // updated
             <canvas id="visualizer"></canvas> // updated // updated // updated
+            <audio id="audio-source" style="display: none;"></audio> // updated // updated // updated // updated
