--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -80,3 +80,4 @@
         <main> // updated // updated
             <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*"> // updated // updated
+                <button id="play-pause-btn" disabled>Play</button> // updated
