docs: improve inline comments

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -81,3 +81,4 @@
             <div class="controls"> // updated // updated
                 <input type="file" id="audio-upload" accept="audio/*"> // updated // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
+            </div> // updated // updated
