style: adjust formatting and spacing

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -84,3 +84,4 @@
             </div> // updated // updated
             <canvas id="visualizer"></canvas> // updated // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated // updated // updated
+        </main> // updated
