update project structure for better maintainability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -82,3 +82,4 @@
                 <input type="file" id="audio-upload" accept="audio/*"> // updated // updated
                 <button id="play-pause-btn" disabled>Play</button> // updated
             </div> // updated // updated
+            <canvas id="visualizer"></canvas> // updated // updated // updated
