--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -85,3 +85,4 @@
             <canvas id="visualizer"></canvas> // updated // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated // updated // updated
         </main> // updated
+        <footer>
