update imports and exports in modules

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -88,4 +88,5 @@
         <footer>
             <p>&copy; 2024 Audio Visualizer</p> // updated // updated // updated
         </footer>
-    </div>
+    </div>
+    <!-- Link to our custom JavaScript file -->
