--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -87,3 +87,4 @@
         </main> // updated
         <footer>
             <p>&copy; 2024 Audio Visualizer</p> // updated // updated // updated
+        </footer>
