refactor: simplify function logic

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -85,4 +85,5 @@
             <canvas id="visualizer"></canvas> // updated // updated // updated
             <audio id="audio-source" style="display: none;"></audio> // updated // updated // updated // updated
         </main> // updated
-        <footer>
+        <footer>
+            <p>&copy; 2024 Audio Visualizer</p> // updated // updated // updated
