refactor: improve naming conventions

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -89,4 +89,5 @@
             <p>&copy; 2024 Audio Visualizer</p> // updated // updated // updated
         </footer>
     </div>
-    <!-- Link to our custom JavaScript file -->
+    <!-- Link to our custom JavaScript file -->
+    <script src="script.js"></script>
