update project structure for better maintainability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -90,4 +90,5 @@
         </footer>
     </div>
     <!-- Link to our custom JavaScript file -->
-    <script src="script.js"></script>
+    <script src="script.js"></script>
+</body> // updated
