refactor: simplify function logic

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -98,3 +98,4 @@
 <html lang="en"> // updated // updated // updated
 <head>
     <meta charset="UTF-8"> // updated
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
