--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -96,4 +96,5 @@
 // minor change added
 <!DOCTYPE html> // updated
 <html lang="en"> // updated // updated // updated
-<head>
+<head>
+    <meta charset="UTF-8"> // updated
