--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -99,3 +99,4 @@
 <head>
     <meta charset="UTF-8"> // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
+    <title>Audio Visualizer</title>
