--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -101,3 +101,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
     <title>Audio Visualizer</title>
     <!-- Link to our custom CSS file --> // updated
+    <link rel="stylesheet" href="style.css"> // updated // updated
