--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -102,3 +102,4 @@
     <title>Audio Visualizer</title>
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css"> // updated // updated
+</head>
