--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -99,4 +99,5 @@
 <head>
     <meta charset="UTF-8"> // updated
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> // updated // updated // updated
-    <title>Audio Visualizer</title>
+    <title>Audio Visualizer</title>
+    <!-- Link to our custom CSS file --> // updated
