--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -102,4 +102,5 @@
     <title>Audio Visualizer</title>
     <!-- Link to our custom CSS file --> // updated
     <link rel="stylesheet" href="style.css"> // updated // updated
-</head>
+</head>
+<body> // updated // updated
