--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -104,3 +104,4 @@
     <link rel="stylesheet" href="style.css"> // updated // updated
 </head>
 <body> // updated // updated
+    <div class="container">
