--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -106,3 +106,4 @@
 <body> // updated // updated
     <div class="container">
         <header> // updated // updated
+            <h1>Audio Visualizer</h1> // updated // updated
