update configuration settings

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -107,3 +107,4 @@
     <div class="container">
         <header> // updated // updated
             <h1>Audio Visualizer</h1> // updated // updated
+            <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p> // updated
