--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -104,4 +104,5 @@
     <link rel="stylesheet" href="style.css"> // updated // updated
 </head>
 <body> // updated // updated
-    <div class="container">
+    <div class="container">
+        <header> // updated // updated
