--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -109,4 +109,5 @@
             <h1>Audio Visualizer</h1> // updated // updated
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p> // updated
         </header> // updated
-        <main>
+        <main>
+            <div class="controls">
