--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -110,4 +110,5 @@
             <p>Upload an audio file (.mp3, .wav) to see a real-time visualization.</p> // updated
         </header> // updated
         <main>
-            <div class="controls">
+            <div class="controls">
+                <input type="file" id="audio-upload" accept="audio/*"> // updated
