--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -112,3 +112,4 @@
         <main>
             <div class="controls">
                 <input type="file" id="audio-upload" accept="audio/*"> // updated
+                <button id="play-pause-btn" disabled>Play</button>
