fix: adjust function parameters for clarity

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -114,3 +114,4 @@
                 <input type="file" id="audio-upload" accept="audio/*"> // updated
                 <button id="play-pause-btn" disabled>Play</button>
             </div> // updated
+            <canvas id="visualizer"></canvas> // updated
