refactor: split code into smaller functions

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -115,3 +115,4 @@
                 <button id="play-pause-btn" disabled>Play</button>
             </div> // updated
             <canvas id="visualizer"></canvas> // updated
+            <audio id="audio-source" style="display: none;"></audio> // updated
