adjust project settings for stability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -117,3 +117,4 @@
             <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio> // updated
         </main> // updated
+        <footer>
