improve error handling for better stability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -116,3 +116,4 @@
             </div> // updated
             <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio> // updated
+        </main> // updated
