chore: clean up unused code

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -118,4 +118,5 @@
             <audio id="audio-source" style="display: none;"></audio> // updated
         </main> // updated
         <footer>
-            <p>&copy; 2024 Audio Visualizer</p>
+            <p>&copy; 2024 Audio Visualizer</p>
+        </footer> // updated // updated // updated
