enhance code readability

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -117,4 +117,5 @@
             <canvas id="visualizer"></canvas> // updated
             <audio id="audio-source" style="display: none;"></audio> // updated
         </main> // updated
-        <footer>
+        <footer>
+            <p>&copy; 2024 Audio Visualizer</p>
