--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -120,3 +120,4 @@
         <footer>
             <p>&copy; 2024 Audio Visualizer</p>
         </footer> // updated // updated // updated
+    </div>
