chore: clean up unused code

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -122,3 +122,4 @@
         </footer> // updated // updated // updated
     </div>
     <!-- Link to our custom JavaScript file --> // updated // updated // updated
+    <script src="script.js"></script> // updated // updated // updated
