refactor: improve naming conventions

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -120,4 +120,5 @@
         <footer>
             <p>&copy; 2024 Audio Visualizer</p>
         </footer> // updated // updated // updated
-    </div>
+    </div>
+    <!-- Link to our custom JavaScript file --> // updated // updated // updated
