remove redundant code for optimization

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -123,3 +123,4 @@
     </div>
     <!-- Link to our custom JavaScript file --> // updated // updated // updated
     <script src="script.js"></script> // updated // updated // updated
+</body> // updated // updated // updated
