update configuration settings

--- a/Audio Visualizer/index.html
+++ b/Audio Visualizer/index.html
@@ -124,3 +124,4 @@
     <!-- Link to our custom JavaScript file --> // updated // updated // updated
     <script src="script.js"></script> // updated // updated // updated
 </body> // updated // updated // updated
+</html>
